# Project3

./: .gitignore  CMakeLists.txt  README.md
data/: downloader.py  smalldata.json
include/Qt6/: .gitignore
include/Qt6/lib/: Qt63DAnimation.prl  Qt63DCore.prl  Qt63DExtras.prl  Qt63DInput.prl  Qt63DLogic.prl  Qt63DQuick.prl  Qt63DQuickAnimation.prl  Qt63DQuickExtras.prl  Qt63DQuickInput.prl  Qt63DQuickRender.prl  Qt63DQuickScene2D.prl  Qt63DRender.prl  Qt6AxBase.prl  Qt6AxContainer.prl  Qt6AxServer.prl  Qt6Bluetooth.prl  Qt6Bodymovin.prl  Qt6Charts.prl  Qt6ChartsQml.prl  Qt6Coap.prl  Qt6Core5Compat.prl  Qt6DataVisualization.prl  Qt6DataVisualizationQml.prl  Qt6DeclarativeOpcua.prl  Qt6Designer.prl  Qt6DesignerComponents.prl  Qt6Graphs.prl  Qt6Grpc.prl  Qt6GrpcQuick.prl  Qt6Help.prl  Qt6HttpServer.prl  Qt6JsonRpc.prl  Qt6LabsAnimation.prl  Qt6LabsFolderListModel.prl  Qt6LabsQmlModels.prl  Qt6LabsSettings.prl  Qt6LabsSharedImage.prl  Qt6LabsWavefrontMesh.prl  Qt6LanguageServer.prl  Qt6Location.prl  (+90 more)
include/Qt6/metatypes/: qt6grpcquick_release_metatypes.json  qt6opcua_release_metatypes.json
include/Qt6/mkspecs/: qconfig.pri  qmodule.pri
include/Qt6/modules/: 3DAnimation.json  3DCore.json  3DExtras.json  3DInput.json  3DLogic.json  3DQuick.json  3DQuickAnimation.json  3DQuickExtras.json  3DQuickInput.json  3DQuickRender.json  3DQuickScene2D.json  3DRender.json  ActiveQt.json  AxBasePrivate.json  AxContainer.json  AxServer.json  Bluetooth.json  BodymovinPrivate.json  Charts.json  ChartsQml.json  Coap.json  Concurrent.json  Core.json  Core5Compat.json  DBus.json  DataVisualization.json  DataVisualizationQml.json  DeclarativeOpcua.json  Designer.json  DesignerComponentsPrivate.json  DeviceDiscoverySupportPrivate.json  EntryPointPrivate.json  ExampleIconsPrivate.json  Graphs.json  (+127 more)
src/: game.cpp  game.h  graph.cpp  graph.h  gui.cpp  main.cpp  mainwindow.cpp  mainwindow.h  parser.cpp  parser.h  ui_mainwindow.h
(+1701 files in other folders)
